--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.15",
+    "appwrite": "^16.1.0",
+    "dotenv": "^16.4.7",
+    "markdown-it": "^14.1.0",
+    "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "react-dotenv": "^0.1.3",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "postcss": "^8",
