--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@vercel/analytics": "^1.4.1",
     "appwrite": "^16.1.0",
     "dotenv": "^16.4.7",
     "markdown-it": "^14.1.0",
